[build-system]
requires = ["setuptools>=42", "wheel", "setuptools_scm[toml]>=3.4"]
build-backend = "setuptools.build_meta"

[tool.black]
target_version = ["py36"]

[tool.setuptools_scm]
local_scheme = "no-local-version"

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
addopts = "--doctest-modules"

[tool.tox]
legacy_tox_ini = """
[tox]
envlist =
    py{36, 37, 38, 39, py3}

[testenv]
extras =
    tests
commands =
    {envpython} -m pytest --cov humanize --cov tests --cov-report xml {posargs}

[testenv:docs]
deps = -r docs/requirements.txt
commands = mkdocs build

[testenv:lint]
deps = pre-commit
commands = pre-commit run --all-files --show-diff-on-failure
skip_install = true
passenv = PRE_COMMIT_COLOR
"""
