[metadata]
name = humanize
description = Python humanize utilities
long_description = file: README.md
long_description_content_type = text/markdown
author = Jason Moiron
author_email = jmoiron@jmoiron.net
maintainer = Hugo van Kemenade
url = https://github.com/jmoiron/humanize
project_urls =
    Source=https://github.com/jmoiron/humanize
    Issue tracker=https://github.com/jmoiron/humanize/issues
    Funding=https://tidelift.com/subscription/pkg/pypi-humanize?utm_source=pypi-humanize&utm_medium=pypi
license = MIT
keywords = humanize time size
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Topic :: Text Processing
    Topic :: Text Processing :: General

[options]
packages = find:
package_dir = =src
include_package_data = True
zip_safe = False
install_requires = setuptools
setup_requires = setuptools_scm
python_requires = >=3.6

[options.packages.find]
where = src

[options.extras_require]
tests =
    freezegun
    pytest
    pytest-cov

[flake8]
max_line_length = 88

[pydocstyle]
convention = google

[tool:isort]
known_third_party = freezegun,humanize,pkg_resources,pytest,setuptools
force_grid_wrap = 0
include_trailing_comma = True
line_length = 88
multi_line_output = 3
use_parentheses = True

[tool:pytest]
addopts = --color=yes
