[metadata]
name = humanize
description = Python humanize utilities
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jmoiron/humanize
author = Jason Moiron
author_email = jmoiron@jmoiron.net
maintainer = Hugo van Kemenade
license = MIT
license_file = LICENCE
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Topic :: Text Processing
    Topic :: Text Processing :: General
keywords = humanize time size
project_urls =
    Source=https://github.com/jmoiron/humanize
    Issue tracker=https://github.com/jmoiron/humanize/issues
    Funding=https://tidelift.com/subscription/pkg/pypi-humanize?utm_source=pypi-humanize&utm_medium=pypi

[options]
packages = find:
install_requires =
    setuptools
python_requires = >=3.6
include_package_data = True
package_dir = =src
zip_safe = False

[options.extras_require]
tests =
    freezegun
    pytest
    pytest-cov

[options.packages.find]
where = src

[flake8]
max_line_length = 88

[pydocstyle]
convention = google

[tool:isort]
profile = black

[tool:pytest]
addopts = --color=yes
